tests/fails/f45.t
if not require("fail") then return end

terra foo()
  break
end
foo()
